<resources>
    <string name="app_name">ToDo</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="add_todo">Add TODO</string>
    <string name="the_task">The Task</string>
    <string name="set_reminder">Set reminder</string>
    <string name="explain_the_task">Explain the task</string>
    <string name="task_title">Task Title</string>
    <string name="enter_the_task_title">Enter the task title</string>
    <string name="save_task">SAVE TASK</string>
    <string name="add_new_task">Add new Task</string>
    <string name="enter_time">Enter time</string>
</resources>